# soccer-analytics

./: .env.example  .gitignore  AGENTS.md  CODEX_PROMPT.md  DATA_PIPELINE.md  HLD.md  LLD.md  MODEL_ENGINE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: live_triggers.json  modality_rules.json
demo/: HL001-argentina-switzerland.html  soccer-edge-demo.html  soccer-edge-finetuning-report.html  soccer-edge-finetuning-report.md
docs/: local_pipeline.md  raw_player_data.md  school_project_arxiv_paper.md  school_project_submission.md  training_data_sourcing.md
examples/: README.md  match_results_example.csv  school_project_training.csv  tiny_grid_features.csv  tiny_training.csv
examples/annotations/: data.yaml
examples/calibration/: pitch_calibration.json
manifests/: match_catalog.example.csv  video_discovery.csv  video_manifest.example.csv
paper/: arxiv_draft.tex  school_project_arxiv.tex
scripts/: batch_cnn_eval.sh  build_highlights_training.py  evaluate_cnn.py  evaluate_highlights.py  evaluate_statsbomb.py  process_highlights_batch.py
tests/: test_active_sampling.py  test_alignment.py  test_annotation_audit.py  test_annotation_dataset.py  test_annotation_split.py  test_annotations.py  test_app_logging.py  test_attacking_zones.py  test_auto_data_card.py  test_ball_interpolation.py  test_ball_kinematics.py  test_ball_motion.py  test_batch_runner.py  test_calibration.py  test_calibration_io.py  test_calibration_qa.py  test_calibration_review.py  test_calibration_summary.py  test_capture.py  test_card_validation.py  test_cards.py  test_cli.py  test_cli_data_integrations.py  test_cli_final_integrations.py  test_cli_final_workflow.py  test_cli_local_chain.py  test_cli_model_ops.py  test_cli_next_video_tools.py  test_cli_reports.py  test_cli_review_extensions.py  test_cli_review_tools.py  test_cli_source_player_promotion.py  test_cli_tensor_compare.py  test_cli_video_catalog.py  test_cnn_eval.py  test_cnn_outputs.py  test_cnn_review.py  test_cnn_runner.py  test_cnn_training.py  test_comparison.py  (+89 more)
(+259 files in other folders)
