[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-analytics"
version = "0.1.0"
description = "Soccer analytics research package."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.2",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
soccer-edge = "soccer_edge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
