[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-analytics"
version = "0.1.0"
description = "Soccer analytics research package."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.2",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
soccer-edge = "soccer_edge.cli:app"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
# The codebase leans on numpy/torch/cv2, whose attribute types mypy infers poorly
# (e.g. dynamically-generated cv2.* members). These codes are dominated by such
# false positives; this config keeps mypy a useful (non-blocking) regression gate.
disable_error_code = [
    "attr-defined",
    "arg-type",
    "union-attr",
    "assignment",
    "operator",
    "index",
    "var-annotated",
    "dict-item",
    "call-arg",
    "return-value",
    "no-untyped-def",
]
# Codes that still fire (real regression signals):
enable_error_code = [
    "truthy-bool",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-expr",
]

[tool.setuptools.packages.find]

where = ["src"]
